src/buck/snapshots/muntjac__buck__string_writer__tests__uniform_deps_plain_list.snap
---
source: src/buck/string_writer.rs
expression: out.buck
---
##
## @generated by muntjac
## Do not edit by hand.
##

load("//third-party/python:muntjac.bzl", "pypi_package")

pypi_package(
    name = "requests",
    version = "2.32.3",
    deps = [
        ":certifi",
        ":idna",
    ],
    wheels = {
        "py312-linux-x86_64-gnu": ("https://example.com/requests-2.32.3-py3-none-any.whl", "sha256:req"),
    },
    visibility = ["PUBLIC"],
)
