src/buck/snapshots/muntjac__buck__string_writer__tests__wiring_bzl_single_platform.snap
---
source: src/buck/string_writer.rs
expression: out.wiring_bzl
---
##
## @generated by muntjac
## Do not edit by hand.
##
## Host-axis modifiers for muntjac's per-cell platform constraints.
##
## The user's root PACKAGE loads MUNTJAC_HOST_MODIFIERS and passes it
## to set_cfg_modifiers() directly. set_cfg_modifiers() cannot be wrapped
## in a helper function — the prelude enforces that it be called from
## a PACKAGE/BUCK_TREE file, not a .bzl file.
##
## Wiring contract for consumers — add to your root PACKAGE:
##
##   load(
##       "@prelude//cfg/modifier:cfg_constructor.bzl",
##       "cfg_constructor_post_constraint_analysis",
##       "cfg_constructor_pre_constraint_analysis",
##   )
##   load("@prelude//cfg/modifier:common.bzl", "MODIFIER_METADATA_KEY")
##   load("@prelude//cfg/modifier:set_cfg_modifiers.bzl", "set_cfg_modifiers")
##   load("//third-party/python:wiring.bzl", "MUNTJAC_HOST_MODIFIERS")
##
##   set_cfg_constructor(
##       stage0 = cfg_constructor_pre_constraint_analysis,
##       stage1 = cfg_constructor_post_constraint_analysis,
##       key = MODIFIER_METADATA_KEY,
##       aliases = struct(),
##       extra_data = struct(),
##   )
##   set_cfg_modifiers(cfg_modifiers = MUNTJAC_HOST_MODIFIERS)
##

MUNTJAC_HOST_MODIFIERS = [
    {
        "_type": "ModifiersMatch",
        "prelude//os/constraints:linux": {
            "_type": "ModifiersMatch",
            "prelude//cpu/constraints:x86_64": "root//third-party/python/config:linux-x86_64-gnu",
        },
    },
]
